--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -6,11 +6,13 @@
 </head>
 <body>
 <h2><a href="/">Show All Submitted Links</a></h2>
-    <b>Title: </b><span th:text="${link.title}"></span><br/>
-    <b>URL: </b><span th:text="${link.url}"></span><br/>
+    <br/>
+    <b>Title: </b>
+        <a href="http://www.google.com" target="_blank"><span th:text="${link.title}"></span></a><br/>
+    <!--<b>URL: </b><span th:text="${link.url}"></span><br/>-->
     <b>Date Submitted: </b><span th:text="${link.date}"></span><br/>
     <b>Submission By: </b><span th:text="${link.submittedBy}"></span><br/>
-    <br/>
+<br/>
     <a th:href="@{/delete/{id}(id=${link.id})}">Delete This Link</a>
 
 </body>
