--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,14 +11,14 @@
 <table>
     <tr>
         <th>Title</th>
-        <!--<th>URL</th>-->
         <th>Date Submitted</th>
         <th>Submitted By</th>
     </tr>
 
     <tr th:each="link: ${links}">
-        <a th:href="@{'//'+${link.url}}" target="_blank"><td th:text="${link.title}"></td></a>
-        <!--<td th:text="${link.url}"></td> -->
+        <td>
+            <a th:href="@{'//'+${link.url}}" target="_blank" th:text="${link.title}"></a>
+        </td>
         <td th:text="${link.date}"></td>
         <td th:text="${link.submittedBy}"></td>
         <td>
